Fix directionality of few words

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -1566,19 +1566,19 @@ download is 100% complete”. عليك الانتباه إلى أن “\type{%d}
 \NC \REF[cRB]{ترجمة سيئة}    \NC \REF[cRB]{شكل المصدر}
 \NC \REF[cRB]{شكل الترجمة}   \NC \REF[cRB]{ملاحظات}\SR
 \HL
-\NC &File \NC \REF[l]{&ملف} \NC \REF[l]{م&لف} \NC \underbar{F}ile \NC \underbar{م}لف
+\NC \ltr{&File} \NC \REF[l]{&ملف} \NC \REF[l]{م&لف} \NC \underbar{F}ile \NC \underbar{م}لف
 \NC قاعدة 1 و 2\FR
-\NC &Jump \NC \REF[l]{ت&نقّل} \NC \REF[l]{&تنقّل} \NC \underbar{J}ump \NC ت\underbar{ن}قل \NC
+\NC \ltr{&Jump} \NC \REF[l]{ت&نقّل} \NC \REF[l]{&تنقّل} \NC \underbar{J}ump \NC ت\underbar{ن}قل \NC
 قاعدة 3 و 4\MR
-\NC ~Tools \NC Di~tlabela \NC \ltr{~Ditlabela} \NC \underbar{T}ools \NC Di\underbar{t}labela \NC قاعدة 1 و
+\NC \ltr{~Tools} \NC Di~tlabela \NC \ltr{~Ditlabela} \NC \underbar{T}ools \NC Di\underbar{t}labela \NC قاعدة 1 و
 3\MR
-\NC &Help \NC T&hušo \NC \ltr{&Thušo} \NC \underbar{H}elp \NC
+\NC \ltr{&Help} \NC T&hušo \NC \ltr{&Thušo} \NC \underbar{H}elp \NC
 T\underbar{h}ušo \NC قاعدة 1\MR
-\NC _Move \NC Š_uthiša \NC \ltr{_Šuthiša} \NC \underbar{M}ove \NC
+\NC \ltr{_Move} \NC Š_uthiša \NC \ltr{_Šuthiša} \NC \underbar{M}ove \NC
 Š\underbar{u}thiša \NC قاعدة 8\MR
 \NC Zoom &100% \NC Godiša &100% \NC \ltr{&Godiša 100%} \NC Zoom
 \underbar{1}00% \NC Godiša \underbar{1}00% \NC قاعدة 11\MR
-\NC ~Font Size \NC Bogola bja ~fonte \NC Bogola
+\NC \ltr{~Font Size} \NC Bogola bja ~fonte \NC Bogola
 bja~fonte \NC Font Size \NC Bogola bja \underbar{f}onte \NC
 المسافات\LR
 \HL
