--- a/tex/main.tex
+++ b/tex/main.tex
@@ -1823,8 +1823,8 @@ bja~fonte \NC Font Size \NC Bogola bja \underbar{f}onte \NC
 إذا كان للمصطلح أكثر من اقتراح فسيعرض فرتال الاقتراحات في قائمة ويمكن
 اختيار الترجمة المختارة أو ضغط <Escape> ومواصلة الكتابة.
 
+\page
 \subsubsection[ref:36543315]{استعمال اقتراحات ذاكرة الترجمة أو الترجمة الآلية}
-
 
 \placefigure[here,force]
   {none}
@@ -2386,6 +2386,10 @@ bja~fonte \NC Font Size \NC Bogola bja \underbar{f}onte \NC
 خاصة تلك الموجودة في نافذة البرمجية الرئيسية. كذلك حافظ على اتِّساق
 مسرعات العناصر الشائعة (مثل “ملف” و “مساعدة”) بين التطبيقات المختلفة.
 
+\placefigure [here,force]
+  {none}
+  {\externalfigure[img004.png][width=.8\textwidth]}
+
 إذا كنت ترجمت الوثائق فعليك مراجعتها في عارض وثائق المساعدة المناسب.
 تحقق من صحة عناوين الصفحات و من مسارات الروابط ما بين الصفحات، وأن
 وظيفة البحث تُظهر نتائج مترجمة. تأكد من أن نصوص المساعدة تستعمل فيها
@@ -2594,6 +2598,11 @@ Name}\letterbackslash share\letterbackslash locale\letterbackslash
 لتقييم هذه المشروعات.
 
 \section[ref:34376426]{راسم تُكس}
+
+\placefigure [right,hang]
+  {none}
+  {\externalfigure[img006.png][width=.2\textwidth]}
+
 “راسم تُكس” برمجية رسم للأطفال.
 
 \startitemize[1]
@@ -2622,6 +2631,11 @@ Name}\letterbackslash share\letterbackslash locale\letterbackslash
 \CURL{http://www.tuxpaint.org}
 
 \section{جتك+ و xdg-user-dirs}
+
+\placefigure [right,hang]
+  {none}
+  {\externalfigure[img007.png][width=.2\textwidth]}
+
 جتك+ منصة لبناء التطبيقات ومن أشهر ما بُني عليها مشروع گنوم. توفر جتك+
 للبرمجيات بنية تحتية شائعة: مربعات حِوار لفتح الملفات، وخيارات الطباعة،
 والأهم - فيما يخص هذا القسم من الكتاب - بعض المقاطع الشائعة مثل “OK” و
@@ -2661,6 +2675,11 @@ xdg-user-dirs لا تستخدم غالبا إلا على أنظمة لينُكس
 يسيرا من هذه المقاطع.
 
 \section{فَيَرفُكس}
+
+\placefigure [right,hang]
+  {none}
+  {\externalfigure[img008.png][width=.2\textwidth]}
+
 فَيَرفُكس متصفح وِب شهير ينتجه مشروع موزيلا.
 
 \startitemize[1]
@@ -2692,6 +2711,11 @@ xdg-user-dirs لا تستخدم غالبا إلا على أنظمة لينُكس
 
 
 \section{مُنصِّب دِبيان}
+
+\placefigure [right,hang]
+  {none}
+  {\externalfigure[img009.png][width=.2\textwidth]}
+
 دِبيان من مشروعات البرمجيات الحرة الكبيرة، إذ يبني واحدة من أشهر توزيعات
 لينُكس، وهي أيضا الأساس لتوزيعة أوبونتو. قد تكون أداة التنصيب أول شيء
 يراه مستخدم دبيان أو أوبونتو، وهو مشروع جيد التنظيم ويبدي اهتماما كبيرا
@@ -2723,7 +2747,5 @@ xdg-user-dirs لا تستخدم غالبا إلا على أنظمة لينُكس
 الأمد فقد ترغب في العمل عليه.
 
 \stopbodymatter
-
-\page[empty]
 
 \stoptext
