Swap cutspace and backspace
To work around printer's shortcomings.

--- a/tex/l10n-ar.tex
+++ b/tex/l10n-ar.tex
@@ -230,7 +230,11 @@
 \setuplayout
   [grid=no,
 %  marking=on,
-   location=middle]
+   location=middle,
+   alternative=doublesided,
+   cutspace=\backspace,
+   backspace=\cutspace,
+   ]
 
 %\startmode[screen]
 %  \setuppapersize
