Revert "Get ride of page number in the last page"
This reverts commit 4faf1655d195f6b9d481645ecccccf3991cba2f1.

To be fixed properly.

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -2746,5 +2746,6 @@ xdg-user-dirs لا تستخدم غالبا إلا على أنظمة لينُكس
 مشروعات أخرى كما أوضحنا سلفا. إذا كان لديك فريق واسع الموارد أو طويل
 الأمد فقد ترغب في العمل عليه.
 
+\stopbodymatter
 
 \stoptext
