True empty page at end

--- a/tex/l10n-ar.tex
+++ b/tex/l10n-ar.tex
@@ -233,8 +233,10 @@
    location=middle,
    alternative=doublesided,
    cutspace=\backspace,
-   backspace=\cutspace,
-   ]
+   backspace=\cutspace]
+
+\setupsectionblock[frontpart][page=no]
+\setupsectionblock[bodypart] [page=empty]
 
 %\startmode[screen]
 %  \setuppapersize
