--- a/tex/main.tex
+++ b/tex/main.tex
@@ -1864,7 +1864,7 @@ bja~fonte \NC Font Size \NC Bogola bja \underbar{f}onte \NC
 ليست كل المشاكل التي يشير إليها فِرتال أخطاء فعلية، إنما هو تنبيه باحتمال
 وجود خطأ عليك مراجعته. علىك أيضا تحديد نوع المشروع (گنوم، كدي، موزيلا، إلخ.)
 في اختيار نوع المشروع، لمساعدته على إجراء اختبارات الجودة المناسبة.
-\CURL{http://translate.sourceforge.net/wiki/pootle/checks}
+\CURL{http://translate.sourceforge.net/wiki/virtaal/checks}
 
 \section{بُوتِل}
 بوتل نظام لإنجاز الترجمات وإدارتها عبر الوب تستخدمه كثير من مشروعات
