Add missed figure and remove a no longer needed manual line break

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -1788,6 +1788,9 @@ bja~fonte \NC Font Size \NC Bogola bja \underbar{f}onte \NC
 الاستكمال التلقائي كلمة محتملة، فيمكنك قبول الاقتراح بضغط <Tab>، أما إذا لم
 يكن الاقتراح هو المطلوب فتجاهله وواصلة الكتابة، و إذا تسرعت بقبول اقتراح لا
 تريده فيمكن التراجع عنه بضغط \KBD{Ctrl+Z} كالمعتاد.
+\placefigure[here,force]
+  {none}
+  {\externalfigure[img010.png][width=.9\textwidth]}
 
 \subsubsection{التصويب التلقائي}
 يُوفر فرتال عليك بعض الوقت بتصويب بعض أخطاء الكتابة الشائعة، لكن هذا
@@ -1823,7 +1826,6 @@ bja~fonte \NC Font Size \NC Bogola bja \underbar{f}onte \NC
 إذا كان للمصطلح أكثر من اقتراح فسيعرض فرتال الاقتراحات في قائمة ويمكن
 اختيار الترجمة المختارة أو ضغط <Escape> ومواصلة الكتابة.
 
-\page
 \subsubsection[ref:36543315]{استعمال اقتراحات ذاكرة الترجمة أو الترجمة الآلية}
 
 \placefigure[here,force]
