--- a/tex/l10n-ar.tex
+++ b/tex/l10n-ar.tex
@@ -324,7 +324,7 @@
 
 \unexpanded\def\type{\groupedcommand{\setgroupedtype\bidilre}{\bidipop}} % fixme
 
-\unexpanded\def\قسم#1 {قسم~\about[ref:#1]}
-\unexpanded\def\صفحة#1{صفخة~\at[ref:#1]}
+\unexpanded\def\قسم#1{قسم~\about[ref:#1]}
+\unexpanded\def\صفحة#1{صفحة~\at[ref:#1]}
 
 \stopenvironment
