Append \setupbidi to \everystartext
This fixes mysterious directionality issues I had; \everypar is *after*
each paragraph which means first one gets nothing, while what I really
need is to execute it once at the start of the document.

--- a/tex/l10n-ar.tex
+++ b/tex/l10n-ar.tex
@@ -25,7 +25,7 @@
 
 \appendtoks
   \setupbidi[main=\getvariable{l10n-manual}{direction}]
-\to \everypar
+\to \everystarttext
 
 \def\ltr#1{{\bidilre#1\bidipop}}
 
