--- a/tex/l10n-ar.tex
+++ b/tex/l10n-ar.tex
@@ -43,7 +43,9 @@
 
 %\doifmodeelse{screen}
 %  {\setupbodyfont[14pt]}
-  {\setupbodyfont[12pt]}
+%  {
+   \setupbodyfont[12pt]
+%  }
 
 %
 % cover page
