Use the newly learned trick

--- a/tex/l10n-ar.tex
+++ b/tex/l10n-ar.tex
@@ -329,4 +329,6 @@
 \unexpanded\def\قسم#1{قسم~\about[ref:#1]}
 \unexpanded\def\صفحة#1{صفحة~\at[ref:#1]}
 
+\appendtoks \asciimode \to \everystarttext
+
 \stopenvironment
