Remove no longer needed hacks

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -17,7 +17,7 @@
 \CoverPage
 
 \startalignment[middle]
-بعض محتويات هذا الكتاب بنيت على مواد من موقع مشروع Translate\rlm:
+بعض محتويات هذا الكتاب بنيت على مواد من موقع مشروع Translate:
 \CURL{http://translate.sourceforge.net/}
 
 \placetable[here,force,nonumber]{}
@@ -49,7 +49,6 @@
 
 \page
 
-\rlm
 \section{مقدمة}
 الحواسيب أدوات رائعة يمكن الانتفاع بها على أوجه لا حصر لها، إلا أننا
 ننزعج عندما لا تعمل على النحو الذي نريد. نتفاعل باستمرار مع التقنية
@@ -2038,7 +2037,7 @@ bja~fonte \NC Font Size \NC Bogola bja \underbar{f}onte \NC
 
 تحتوي عُدَّة الترجمة على عدد من أدوات تحويل الصيغ التي تستخدمها كثير من
 المشروعات الحرة (راجع \صفحة{20165030})، كما توجد
-مُحوِّلات أخرى مثل po4a و xml2po\rlm.
+مُحوِّلات أخرى مثل po4a و xml2po.
 \CURL{http://translate.sourceforge.net/wiki/toolkit/index}
 \CURL{http://po4a.alioth.debian.org}
 
@@ -2232,7 +2231,7 @@ bja~fonte \NC Font Size \NC Bogola bja \underbar{f}onte \NC
 استمرارية المشروع، وينبغي ألا يؤثر هذا على عملك.
 
 لمزيد من المطالعة طالع “ترخيص البرمجيات الحرة\letterbackslash مفتوحة
-المصدر” من تأليف Shun-ling Chen\rlm.
+المصدر” من تأليف Shun-ling Chen.
 \CURL{http://www.iosn.net/licensing/foss-licensing-primer/foss-licensing-final.pdf}
 \CURL{http://en.wikibooks.org/wiki/FOSS_Licensing}
 
