--- a/tex/main.tex
+++ b/tex/main.tex
@@ -1674,7 +1674,7 @@ bja~fonte \NC Font Size \NC Bogola bja \underbar{f}onte \NC
 
 هنا غيّرنا الأسماء الرمزية للمتغيرات ليدل الاسم على موضع المتغير في
 العبارة المصدر بالإنگليزية. فالمتغير “\type{%d}” يصبح “\type{%1$d}”
-بإدخال “\type{1$}\lrm” فيه، وهذا يعني أنه يقابل المتغير الأول في العبارة
+بإدخال “\type{1$}” فيه، وهذا يعني أنه يقابل المتغير الأول في العبارة
 الإنگليزية بغض النظر عن ترتيب وروده في الترجمة. قِس على هذا باقي المتغيرات.
 تدعم كثير من البرمجيات هذا الأسلوب (خاصة المبنية بلغة سي و شبيهاتها التي توظِّف
 دالة \type{printf()})، يمكن التأكد بسؤال المبرمجين.
