--- a/tex/l10n-ar.tex
+++ b/tex/l10n-ar.tex
@@ -128,7 +128,7 @@
   [section,subsection,subsubsection]
   [command=\dummy]
 
-\def\dummy#1#2{#2} % fixme
+\def\dummy#1#2{#2} % XXX
 
 %
 % page numbering
@@ -174,7 +174,7 @@
   [section]
   [numbercommand=\dummyone]
 
-\def\dummyone#1{} % fixme
+\def\dummyone#1{} % XXX
 
 %
 % interaction
@@ -298,8 +298,8 @@
    frame=off,
    background=screen]
 
-\def\example#1{\exampleframed{\ltr{\tt #1}}} % fixme
-\def\rexample#1{\rexampleframed{\tt #1}} % fixme
+\def\example#1{\exampleframed{\ltr{\tt #1}}} % XXX
+\def\rexample#1{\rexampleframed{\tt #1}} % XXX
 
 %
 % urls
@@ -320,7 +320,7 @@
 %
 \unexpanded\def\zwj{\char"200D}
 
-\unexpanded\def\type{\groupedcommand{\setgroupedtype\bidilre}{\bidipop}} % fixme
+\unexpanded\def\type{\groupedcommand{\setgroupedtype\bidilre}{\bidipop}} % XXX
 
 \unexpanded\def\قسم#1{قسم~\about[ref:#1]}
 \unexpanded\def\صفحة#1{صفحة~\at[ref:#1]}
