More bidi fixes

--- a/tex/l10n-ar.tex
+++ b/tex/l10n-ar.tex
@@ -128,7 +128,7 @@
   [section,subsection,subsubsection]
   [command=\dummy]
 
-\def\dummy#1#2{#2} % XXX
+\def\dummy#1#2{\framedtext[width=broad,offset=0pt,frame=off]{#2}} % XXX
 
 %
 % page numbering
