Really center centered URL's

--- a/tex/l10n-ar.tex
+++ b/tex/l10n-ar.tex
@@ -269,7 +269,7 @@
   {\def\URL#1{\ltr{\goto{#1}[url(#1)]}}}
   {\def\URL#1{\ltr{#1}}}
 
-\def\CURL#1{\crlf\URL{#1}}
+\def\CURL#1{\crlf\midaligned{\URL{#1}}}
 
 %
 % misc.
