--- a/tex/main.tex
+++ b/tex/main.tex
@@ -18,24 +18,25 @@
 
 \startalignment[middle]
 بعض محتويات هذا الكتاب بنيت على مواد من موقع مشروع Translate:
-\CURL{http://translate.sourceforge.net/}
+
+\URL{http://translate.sourceforge.net/}
 
 \placetable[here,force,nonumber]{}
 \starttable[|rp(.5\textwidth)B|lp(.5\textwidth)|]
 \NC تنسيق المشروع          \NC منال حسن                        \MR
 \NC                        \NC Dwayne Bailey                   \MR
 \NC المؤلف                 \NC Friedel Wolff                   \MR
-\NC الكتابة الإضافية        \NC Samuel Murray – المصطلحات       \MR
+\NC الكتابة الإضافية       \NC Samuel Murray – المصطلحات       \MR
 \NC                        \NC خالد حسني – النقحرة             \MR
 \NC المراجعة               \NC Hermien Bos                     \MR
 \NC                        \NC Kenneth Nielsen                 \MR
-\NC الرسوم والغلاف          \NC Heather Bailey                  \MR
+\NC الرسوم والغلاف         \NC Heather Bailey                  \MR
 \NC التنضيد (نسخة الطباعة) \NC خالد حسني                       \MR
 \NC الترجمة العربية        \NC خالد حسني                       \MR
 \NC                        \NC أحمد غربية                      \MR
 \NC الترجمة الفرنسية       \NC Mohomodou Houssouba             \MR
 \NC                        \NC Claude Paroz                    \MR
-\NC الترجمة الإسبانية       \NC Lucía Morado Vázquez            \MR
+\NC الترجمة الإسبانية      \NC Lucía Morado Vázquez            \MR
 \NC                        \NC Silvia Rodríguez Vázquez        \MR
 \NC التمويل                \NC مركز بحوث التطوير الدولي (IDRC) \MR
 \stoptable
@@ -43,7 +44,8 @@
 © 2011 Translate.org.za
 
 هذا الكتاب مُرخَّصٌ برخصة المشاع الإبداعي “النِّسبة، غيرالتجاري، الترخيص بالمثل”:
-\CURL{http://creativecommons.org/licenses/by-nc-sa/3.0}
+
+\URL{http://creativecommons.org/licenses/by-nc-sa/3.0}
 
 \stopalignment
 
