--- a/tex/main.tex
+++ b/tex/main.tex
@@ -2570,7 +2570,7 @@ Name}\letterbackslash share\letterbackslash locale\letterbackslash
 \stopRExample
 
 \startRExample
-൧൦،൫൦൯ (الهند؛ مالايلام)
+൧൦,൫൦൯ (الهند؛ مالايلام)
 \stopRExample
 
 \subsubsection{مثال على التاريخ}
@@ -2579,11 +2579,11 @@ Name}\letterbackslash share\letterbackslash locale\letterbackslash
 \stopRExample
 
 \startRExample
-March 15، 2010، 03/15/2010 (الولايات المتحدة)
+March 15, 2010, 03/15/2010 (الولايات المتحدة)
 \stopRExample
 
 \startRExample
-15. März 2010 (ألمانيا)
+\ltr{15. März 2010} (ألمانيا)
 \stopRExample
 
 انتبه إلى النسيق الصحيح للأعداد والتواريخ في لغتك. بعض المشروعات تطلب
