--- a/tex/main.tex
+++ b/tex/main.tex
@@ -94,7 +94,7 @@
 
 \chapter{تمهيد}
 \section{توطين البرمجيات}
-تُصمَّم البرمجيات عادة بحيث تتواصل مع المستخدِم بلغة ما مثل الانجليزية،
+تُصمَّم البرمجيات عادة بحيث تتواصل مع المستخدِم بلغة ما مثل الإنگليزية،
 لذا تنبغي ترجمة الرسائل التي تعرضها ليمكن لمتحدثي اللغات الأخرى
 استخدامها، وهذا هو لب صيرورة {\it توطين البرمجيات}. ويُقصد بالتوطين كل
 التغييرات التي تُجرى على المُنتَج لتطويعه إلى لغة أو بلد أو ثقافة أو
@@ -2274,7 +2274,7 @@ There are %d photos on the device %s
 ذاته تعين المترجمين في عملهم. إذا لم تكن تتقن الإنگليزية فإن قيامك
 بالتنويه عن المواضع في النص التي تصعب ترجمتها أو تستحيل يفيد في تحسين
 النص الأصلي وهو ما يعود بالتحسين على عملك في الترجمة. فالمترجم من
-القلائل الذين يقرؤون النصَّ الأصلي في الإنجليزية بتمعن بالغ مما يجعله
+القلائل الذين يقرؤون النصَّ الأصلي في الإنگليزية بتمعن بالغ مما يجعله
 مراجعا جيدا. تستطيع في الأغلب الإبلاغ عن الأخطاء في النص الأصلي
 باستخدام مقتفي علّات المشروع.
 
