--- a/tex/main.tex
+++ b/tex/main.tex
@@ -1576,7 +1576,7 @@ download is 100% complete”. عليك الانتباه إلى أن “\type{%d}
 
 \placetable
   [nonumber]
-  {أمثة}
+  {أمثلة}
 \starttable[|rp(.15\textwidth)T|rp(.15\textwidth)T|rp(.15\textwidth)T|rp(.15\textwidth)|rp(.15\textwidth)|lp(.15\textwidth)|]
 \HL
 \NC \REF[cRB]{النص الإنگليزي} \NC \REF[cRB]{ترجمة جيّدة}
