Should be right aligned

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -1689,9 +1689,9 @@ There are %d photos on the device %s
 وسيُظهر هذا شيئا مثل “There are 55 photos on the device Nikon XYZ”. لكن
 قد يكون من الأنسب صياغة الترجمة على “تحتوي النبيطة Nikon XYZ على 55
 صورة”، وساعتها ستكون عبارة الترجمة كتالي:
-\startExample
+\startRExample
 تحتوي النبيطة \ltr{{\bf %2$s}} على \ltr{{\bf %1$d}} صورة
-\stopExample
+\stopRExample
 
 هنا غيّرنا الأسماء الرمزية للمتغيرات ليدل الاسم على موضع المتغير في
 العبارة المصدر بالإنگليزية. فالمتغير “\type{%d}” يصبح “\type{%1$d}”
