--- a/tex/type-l10nmanual.tex
+++ b/tex/type-l10nmanual.tex
@@ -1,4 +1,4 @@
-\definefontfeature [default]          [default] [script=latn]
+\definefontfeature [default]          [default] [script=latn,trep=no,tlig=no]
 \definefontfeature [arabic-mono]      [arabic]  [tlig=no]
 
 \definefontfallback[serif]            [name:Linux Libertine O]             [arrows]    [force=yes,check=yes]
