Adapt to new bidi method

--- a/tex/l10n-ar.tex
+++ b/tex/l10n-ar.tex
@@ -224,7 +224,10 @@
 %
 % tables
 %
-\setuptables[width=.8\paperwidth]
+\setuptables
+  [width=\textwidth,
+   align=left,
+   distance=small]
 
 %
 % footnotes
