Define a \U shortcut for \underbar
Make tables code a bit more readable.

--- a/tex/l10n-ar.tex
+++ b/tex/l10n-ar.tex
@@ -290,6 +290,8 @@
 
 \unexpanded\def\KBD#1{{\tt #1}}
 
+\unexpanded\def\U#1{\underbar{#1}}
+
 \appendtoks \asciimode \to \everystarttext
 
 \stopenvironment
