--- a/tex/main.tex
+++ b/tex/main.tex
@@ -746,8 +746,8 @@ connection?
 الكلمات الموضحة بسطر تحتها قد تصلح لإضافتها إلى مسرد المصطلحات لتسهيل و
 توحيد ترجمتها:
 \startExample
-\underbar{Are you sure you want} to \underbar{download} the
-\underbar{file} over the \underbar{secure} \underbar{network
+\U{Are you sure you want} to \U{download} the
+\U{file} over the \U{secure} \U{network
 connection}?
 \stopExample
 
@@ -1510,9 +1510,9 @@ download is 100% complete”. عليك الانتباه إلى أن “\type{%d}
 أحيانا “hot key” أو “access key” أو “mnemonic”) هو زر في لوحة المفاتيح
 تضغط عليه لتفعيل قائمة أو إصدار أمر ما بسرعة. إذا نظرت إلى شريط القوائم
 في أي تطبيق فستجد خطًا تحت بعض الحروف في عناوين القوائم. لاحظ الخط تحت
-الحرف الأول في كلٍ من \underbar{F}ile و \underbar{E}dit و
-\underbar{V}iew. لفتح قائمة ملف تضغط \KBD{Alt+F}. ستلاحظ كذلك أن أغلب عناصر
-القائمة لها مُسرِّعات، فللوصول إلى \underbar{O}pen تضغط {\bf o} بعد
+الحرف الأول في كلٍ من \U{F}ile و \U{E}dit و
+\U{V}iew. لفتح قائمة ملف تضغط \KBD{Alt+F}. ستلاحظ كذلك أن أغلب عناصر
+القائمة لها مُسرِّعات، فللوصول إلى \U{O}pen تضغط {\bf o} بعد
 الضغط على \KBD{Alt+F}.
 
 علامة المسرع هي رمز خاص نستعمله لتعيين حرف المُسَرِّع في الترجمة.
@@ -1529,11 +1529,11 @@ download is 100% complete”. عليك الانتباه إلى أن “\type{%d}
     {\bf الاسم}    \NC \REF[RB]{النص الإنگليزي} \NC
     {\bf كيف يظهر} \NC {\bf ملاحظات}        \SR
 \HL
-\NC كدي و Qt و wxWidgets      \NC & \NC علامة &            \NC Save {\bf &}As… \NC Save \underbar{A}s… \NC \FR
-\NC گنوم و GTK                \NC _ \NC الشرطة على السطر _ \NC Save {\bf _}As… \NC Save \underbar{A}s… \NC \MR
-\NC ليبرأوفِس و أوبن\zwnj أوفِس \NC ~ \NC علامة ~            \NC Save {\bf ~}As… \NC Save \underbar{A}s… \NC \MR
-\NC موزيلا                    \NC & \NC علامة &            \NC Save {\bf &}As… \NC Save \underbar{A}s… \NC عند استخدام \goto{moz2po}[url(http://translate.sourceforge.net/wiki/toolkit/moz2po)] \MR
-\NC ملفات \goto{\ltr{.rc}}[url(http://translate.sourceforge.net/wiki/toolkit/rc)]  في وِندوز \NC & \NC علامة &            \NC Save {\bf &}As… \NC Save \underbar{A}s… \NC تستخدم كذلك في واين\LR
+\NC كدي و Qt و wxWidgets      \NC & \NC علامة &            \NC Save {\bf &}As… \NC Save \U{A}s… \NC \FR
+\NC گنوم و GTK                \NC _ \NC الشرطة على السطر _ \NC Save {\bf _}As… \NC Save \U{A}s… \NC \MR
+\NC ليبرأوفِس و أوبن\zwnj أوفِس \NC ~ \NC علامة ~            \NC Save {\bf ~}As… \NC Save \U{A}s… \NC \MR
+\NC موزيلا                    \NC & \NC علامة &            \NC Save {\bf &}As… \NC Save \U{A}s… \NC عند استخدام \goto{moz2po}[url(http://translate.sourceforge.net/wiki/toolkit/moz2po)] \MR
+\NC ملفات \goto{\ltr{.rc}}[url(http://translate.sourceforge.net/wiki/toolkit/rc)]  في وِندوز \NC & \NC علامة &            \NC Save {\bf &}As… \NC Save \U{A}s… \NC تستخدم كذلك في واين\LR
 \HL
 \stoptable
 
@@ -1555,13 +1555,13 @@ download is 100% complete”. عليك الانتباه إلى أن “\type{%d}
 \NC \REF[cRB]{ترجمة سيئة}    \NC \REF[cRB]{شكل المصدر}
 \NC \REF[cRB]{شكل الترجمة}   \NC \REF[cRB]{ملاحظات}\SR
 \HL
-\NC \ltr{&File}      \NC \REF[l]{&ملف}     \NC \REF[l]{م&لف}      \NC \underbar{F}ile      \NC \underbar{م}لف              \NC قاعدة 1 و 2\FR
-\NC \ltr{&Jump}      \NC \REF[l]{ت&نقّل}    \NC \REF[l]{&تنقّل}     \NC \underbar{J}ump      \NC ت\underbar{ن}قل             \NC قاعدة 3 و 4\MR
-\NC \ltr{~Tools}     \NC Di~tlabela        \NC \ltr{~Ditlabela}   \NC \underbar{T}ools     \NC Di\underbar{t}labela        \NC قاعدة 1 و 3\MR
-\NC \ltr{&Help}      \NC T&hušo            \NC \ltr{&Thušo}       \NC \underbar{H}elp      \NC T\underbar{h}ušo            \NC قاعدة 1    \MR
-\NC \ltr{_Move}      \NC Š_uthiša          \NC \ltr{_Šuthiša}     \NC \underbar{M}ove      \NC Š\underbar{u}thiša          \NC قاعدة 8    \MR
-\NC Zoom &100%       \NC Godiša &100%      \NC \ltr{&Godiša 100%} \NC Zoom \underbar{1}00% \NC Godiša \underbar{1}00%      \NC قاعدة 11   \MR
-\NC \ltr{~Font Size} \NC Bogola bja ~fonte \NC Bogola bja~fonte   \NC Font Size            \NC Bogola bja \underbar{f}onte \NC المسافات   \LR
+\NC \ltr{&File}      \NC \REF[l]{&ملف}     \NC \REF[l]{م&لف}      \NC \U{F}ile      \NC \U{م}لف              \NC قاعدة 1 و 2\FR
+\NC \ltr{&Jump}      \NC \REF[l]{ت&نقّل}    \NC \REF[l]{&تنقّل}     \NC \U{J}ump      \NC ت\U{ن}قل             \NC قاعدة 3 و 4\MR
+\NC \ltr{~Tools}     \NC Di~tlabela        \NC \ltr{~Ditlabela}   \NC \U{T}ools     \NC Di\U{t}labela        \NC قاعدة 1 و 3\MR
+\NC \ltr{&Help}      \NC T&hušo            \NC \ltr{&Thušo}       \NC \U{H}elp      \NC T\U{h}ušo            \NC قاعدة 1    \MR
+\NC \ltr{_Move}      \NC Š_uthiša          \NC \ltr{_Šuthiša}     \NC \U{M}ove      \NC Š\U{u}thiša          \NC قاعدة 8    \MR
+\NC Zoom &100%       \NC Godiša &100%      \NC \ltr{&Godiša 100%} \NC Zoom \U{1}00% \NC Godiša \U{1}00%      \NC قاعدة 11   \MR
+\NC \ltr{~Font Size} \NC Bogola bja ~fonte \NC Bogola bja~fonte   \NC Font Size     \NC Bogola bja \U{f}onte \NC المسافات   \LR
 \HL
 \stoptable
 
@@ -1589,7 +1589,7 @@ download is 100% complete”. عليك الانتباه إلى أن “\type{%d}
 الشرطة تحتها لقصرها.
 \item تجنّب الأحرف النازلة عن السطر مثل {\bf ح} (مفردة أو في آخر الكلمة)
 أو {\bf ق} أو {\bf و}، إذ قد تتداخل الشَّرطة مع الحرف فيصعب تمييزه.
-مثلا في كدي \&ح قد تظهر مثل \underbar{ح}. من الأفضل التأكد من هذا
+مثلا في كدي \&ح قد تظهر مثل \U{ح}. من الأفضل التأكد من هذا
 باختبار النتائج في البرمجية بصريا، فبعض النُّظُم تتعامل جيدا مع هذه
 الحالة.
 \item تجنَّب الأحرف التي تجاور أحرف نازلة عن السطر للسبب السابق ذاته.
@@ -1612,9 +1612,9 @@ download is 100% complete”. عليك الانتباه إلى أن “\type{%d}
 العناصر التالية هي أول ثلاث مدخلات في قائمة:
 
 \startitemize[1]
-\item \underbar{م}لف
-\item \underbar{م}ستندات
-\item وثائق ال\zwj\underbar{م}ساعدة…
+\item \U{م}لف
+\item \U{م}ستندات
+\item وثائق ال\zwj\U{م}ساعدة…
 \stopitemize
 
 كما يظهر فإن المسرعات الثلاثة تُعيِّن الحرف {\bf م}، وهذا تعارض. لحسن
@@ -1623,9 +1623,9 @@ download is 100% complete”. عليك الانتباه إلى أن “\type{%d}
 وهذا تعيين أفضل للمسرعات في تلك القائمة:
 
 \startitemize[1]
-\item \underbar{م}لف
-\item مس\underbar{ت}ندات
-\item و\underbar{ث}ائق المساعدة…
+\item \U{م}لف
+\item مس\U{ت}ندات
+\item و\U{ث}ائق المساعدة…
 \stopitemize
 
 هكذا نُعيِّن {\bf م} و {\bf ت} و {\bf ث} فلا يحدث تعارض.
