Define a \L shortcut for \ltr

--- a/tex/l10n-ar.tex
+++ b/tex/l10n-ar.tex
@@ -292,6 +292,8 @@
 
 \unexpanded\def\U#1{\underbar{#1}}
 
+\unexpanded\def\L#1{\ltr{#1}}
+
 \appendtoks \asciimode \to \everystarttext
 
 \stopenvironment
