Use description instead of subsubsection

--- a/tex/l10n-ar.tex
+++ b/tex/l10n-ar.tex
@@ -270,6 +270,18 @@
    background=screen]
 
 %
+% descriptions
+%
+\definedescription
+  [description]
+  [headstyle=bold,
+   style=normal,
+  %align=left,
+   location=hanging,
+   width=broad,
+   margin=1cm]
+
+%
 % urls
 %
 \doifmodeelse{screen}
