--- a/tex/main.tex
+++ b/tex/main.tex
@@ -773,7 +773,7 @@
   
         هذه بعض المصادر التي قد تفيدك:
   
-          \startsubsubsection[title=Open-Tran.eu]
+          \startdescription{Open-Tran.eu}
             يجمع موقع Open-Tran.eu ترجمات مشروعات البرمجيات الحرة ويتيح البحث فيها.  ورغم
             أنه لا يمكن اعتباره مرجعا لترجمة المصطلحات إلا أنه يعطي صورة عامة عن ترجمات
             المصطلحات التي تستعملها البرمجيات الحرة. إذا لم يحتو Open-Tran.eu على كثير من
@@ -782,31 +782,30 @@
       
             يعرض Open-Tran.eu إلى جانب كل اقتراح المشروع الذي جاء منه، وهذا يساعد على توحيد
             المصطلحات مع المشروعات الشبيهة. فإن كنت تترجم أحد مشروعات گنوم مثلا فسيفيدك
-            الانتباه إلى الاقتراحات الآتية من مشروعات گنوم الأخرى.
-            \CURL{http://open-tran.eu}
-          \stopsubsubsection
+            الانتباه إلى الاقتراحات الآتية من مشروعات گنوم الأخرى.\hfill\URL{http://open-tran.eu}
+          \stopdescription
     
-          \startsubsubsection[title=موقع جماعة عُيون العرب (عربايز)]
+          \startdescription{موقع جماعة عُيون العرب (عربايز)}
             عيون العرب جماعة من المعنيين بتوطين البرمجيات من أرجاء العالم العربي، يُنسِّقون
             فيما بينهم توطينَ مشروعات برمجيات حرة عديدة، كما ينخرط بعضهم في مشروعات مختلفة
             معنية بتقنيات اللغة العربية و تشغلهم مسألة الكتابة التقنية بالعربية، و يتواصلون
             بقوائم بريدية. في الموقع مُعجم تقني تجري مُراكمته جماعيا هو مصدر جيّد لترجمات
             المصطلحات، مفتوح لكل من يهمه الأمر و يُرَّحب فيه باقتراحات التعريبات و بالتعليقات،
             كما يضم الموقع مصادر عديدة و إرشادات و أدلّة أسلوبية و مفاهيمية تهم المُوَطِّنين، و
-            مجتمعا يُرحّب بالقادمين الجدد. \CURL{http://wiki.arabeyes.org/القاموس_التقني}
-          \stopsubsubsection
+            مجتمعا يُرحّب بالقادمين الجدد.\hfill\URL{http://wiki.arabeyes.org/القاموس_التقني}
+          \stopdescription
     
-          \startsubsubsection[title=ويكيبيديا]
+          \startdescription{ويكيبيديا}
             ويكيبيديا موسوعة تشاركية على الإنترنت، و هي إن كانت لا تختص بترجمة المصطلحات
             إلا أنها تتناول طيفا واسعا من الموضوعات التقنية بلغات عدة و تربط ما بين تلك
             الموضوعات عبر اللغات مما يُمكّن من البحث فيها عن مصطلح لترى كيف تُرجم في ويكيبيديا
             إلى لغات أخرى، كما قد تفيدُ مقالات ويكيبيديا في استيعاب المفهوم الذي يدل عليه
             المصطلح، حتى إن لم تكن تلك المقالات مترجمة إلى لغتك، وهذا يساعد كثيرا في صوغ
-            ترجمة مناسبة للمصطلح. \CURL{http://www.wikipedia.org}
+            ترجمة مناسبة للمصطلح.\hfill\URL{http://www.wikipedia.org}
+          \stopdescription
       
             نشكر صمويل مُري على مقالته التي استعنّا بها في قسم المصطلحات. المقالة الأصلية
             باللغة الأفريقانية: \CURL{http://leuce.com/translate/termhelp.html}
-          \stopsubsubsection
       \stopsection
   
       \startsection[reference=ref:مبادئ-أساسية, title=مبادئ أساسية]
