\subject is more logical for intro than \section, also it need not to appear in TOC

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -55,7 +55,7 @@
   
     \page
   
-    \startsection[title=مقدمة]
+    \startsubject[title=مقدمة]
       الحواسيب أدوات رائعة يمكن الانتفاع بها على أوجه لا حصر لها، إلا أننا ننزعج
       عندما لا تعمل على النحو الذي نريد. نتفاعل باستمرار مع التقنية فنغير من طريقة
       عملها وتغير هي بدورها من طريقة عملنا، ومع أن هذا التغيير كثيرا ما يكون محمودا،
@@ -87,7 +87,7 @@
       إبقائه في حجم معقول. توجد موضوعات أخرى عديدة تتعلق بلغة بعينها أو أداة بعينها،
       غير أننا في هذا الدليل نقتصر على التعرض للموضوعات المشترَكة في توطين أغلب
       البرمجيات الحرة، وعلى أداتي بُوتِل وفِرتال.
-    \stopsection
+    \stopsubject
   
     \completecontent
   
