Fix footnote number

--- a/tex/l10n-ar.tex
+++ b/tex/l10n-ar.tex
@@ -241,9 +241,14 @@
 %
 % footnotes
 %
-\setupfootnotes
+\setupnote
+  [footnote]
   [rule=right,
    way=bypage]
+
+\setupnotedefinition
+  [footnote]
+  [location=rightmargin]
 
 %
 % itemisation
