--- a/tex/l10n-ar.tex
+++ b/tex/l10n-ar.tex
@@ -1,18 +1,8 @@
 \startenvironment l10n-ar
 
 %
-% variables
+% setup
 %
-\setvariables
-  [l10n-manual]
-  [title=,
-   subtitle=,
-   author=,
-   translator=,
-   keywords=,
-   direction=,
-   language=]
-
 \unexpanded\def\setuplocalisationmanual[#1]
   {\setvariables[l10n-manual][#1]}
 
