--- a/tex/l10n-ar.tex
+++ b/tex/l10n-ar.tex
@@ -10,11 +10,13 @@
 % directionality
 %
 \startnotmode[epub]
- \setupalign[r2l]
- \usemodule[bidi]
-
- \appendtoks
-   \setupbidi[main=\getvariable{l10n-manual}{direction}]
+  \appendtoks
+    \doif {\getvariable{l10n-manual}{direction}} {r2l}
+    {
+      \setupalign[r2l]
+      \usemodule[bidi]
+      \setupbidi[main=r2l]
+    }
  \to \everystarttext
 \stopnotmode
 
